<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    
    <TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/msg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:textSize="16sp"/>
    
    <LinearLayout
        android:layout_height="128dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/transparent_grid_bg"
        android:gravity="center">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/preview"
            android:layout_height="96dp"
            android:layout_width="96dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"/>
        
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/icon_filename_textfield"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_export_icon_name_textfield"
                    android:layout_margin="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/icon_dest_path_textfield"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_export_icon_dest_path_textfield"
                    android:layout_margin="8dp"
                    app:endIconDrawable="@drawable/ic_save_edit"
                    app:endIconMode="custom"
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_export_icon_dest_path_textfield"
                    style="?attr/textInputFilledStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lines="2"
                        android:ellipsize="end" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_tint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:text="@string/msg_tint"
                android:textSize="12sp"
                android:checked="true" />

            <CheckBox
                android:id="@+id/checkbox_advanced_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:text="@string/msg_advanced_options"
                android:textSize="12sp"
                android:checked="false" />

            <LinearLayout
                android:id="@+id/advanced_options"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone">
                
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/option_width"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="4dp"
                        android:hint="width">
    
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true" />
    
                    </com.google.android.material.textfield.TextInputLayout>
                    
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/option_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="4dp"
                        android:hint="height">
    
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true" />
    
                    </com.google.android.material.textfield.TextInputLayout>
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">
                
                    <com.google.android.material.card.MaterialCardView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="4dp"
                        android:layout_weight="1">
                        
                        <FrameLayout
                            android:id="@+id/option_stroke_color"
                            android:layout_height="48dp"
                            android:layout_width="match_parent"
                            android:background="#000000"
                            android:padding="4dp"
                            android:layout_margin="4dp">
                            
                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="STROKE COLOR"
                                android:shadowColor="#000000"
                                android:shadowRadius="2"
                                android:shadowDy="1"
                                android:shadowDx="1"
                                android:padding="4dp"
                                android:textSize="14sp"/>
                            
                        </FrameLayout>
                        
                    </com.google.android.material.card.MaterialCardView>
                    
                    <com.google.android.material.card.MaterialCardView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_margin="4dp"
                        android:layout_weight="1">
                        
                        <FrameLayout
                            android:id="@+id/option_fill_color"
                            android:layout_height="48dp"
                            android:layout_width="match_parent"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:background="@drawable/transparent_grid_bg">
                            
                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="FILL COLOR"
                                android:shadowColor="#000000"
                                android:shadowRadius="2"
                                android:shadowDy="1"
                                android:shadowDx="1"
                                android:padding="4dp"
                                android:textSize="14sp"/>
                            
                        </FrameLayout>
                        
                    </com.google.android.material.card.MaterialCardView>
                
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/option_stroke_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/label_option_stroke_width"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/option_stroke_linecap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/label_option_stroke_linecap"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/option_stroke_linejoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/label_option_stroke_linejoin"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            
            <RelativeLayout
                android:layout_height="72dp"
                android:layout_width="match_parent"
                android:padding="4dp">
        
                <Button
                    android:id="@+id/negative_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/positive_bt"
                    android:layout_margin="4dp"
                    style="?attr/materialButtonOutlinedStyle" />
        
                <Button
                    android:id="@+id/positive_bt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="4dp"
                    style="?attr/materialButtonOutlinedStyle" />
        
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
